<resources>
    <string name="app_name">POS eShop</string>
    <string name="app_pagseguro_name">POSSHOP</string>
    <string name="app_pagseguro_version">1.0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirm">Senha novamente</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_sign_up_short">Cadastrar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Acesse sua conta</string>
    <string name="login_not_have_account">Não tem uma conta? Cadastre-se</string>
    <string name="start_welcome">Bem vindo ao eShop!</string>
    <string name="create_account_title">Criar uma nova conta</string>
</resources>